add bayesMvLMconj funtions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,13 +11,17 @@ export(BPS_pred_MvT)
 export(BPS_weights)
 export(BPS_weights_MvT)
 export(arma_dist)
+export(bayesMvLMconjugate)
 export(conv_opt)
 export(expand_grid_cpp)
 export(forceSymmetry_cpp)
+export(pred_bayesMvLMconjugate)
 export(subset_data)
 importFrom(CVXR,Maximize)
 importFrom(CVXR,Problem)
 importFrom(CVXR,Variable)
 importFrom(CVXR,solve)
 importFrom(Rcpp,sourceCpp)
+importFrom(mniw,rMNorm)
+importFrom(mniw,riwish)
 useDynLib(spBPS, .registration = TRUE)
