--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,6 @@ export(BPS_PseudoBMA)
 export(BPS_combine)
 export(BPS_post)
 export(BPS_post_MvT)
-export(BPS_postdraws)
-export(BPS_postdraws_MvT)
 export(BPS_pred)
 export(BPS_pred_MvT)
 export(BPS_weights)
@@ -24,4 +22,6 @@ importFrom(CVXR,solve)
 importFrom(Rcpp,sourceCpp)
 importFrom(mniw,rMNorm)
 importFrom(mniw,riwish)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 useDynLib(spBPS, .registration = TRUE)
