--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,32 @@
 Package: spBPS
-Title: Univariate and Multivariate Accelerated Spatial Modeling by Bayesian Predictive Stacking
+Title: Bayesian Predictive Stacking for Scalable Geospatial Transfer Learning
 Version: 0.0-1
-Authors@R: 
-    c(person("Luca", "Presicce", , "l.presicce@campus.unimib.it", role = c("aut", "cre"),
-           comment = c(ORCID = "0009-0005-7062-3523")), 
-     person("Sudipto", "Banerjee", role="aut", email="sudipto@ucla.edu"))
+Authors@R: c(
+    person("Luca", "Presicce", role = c("aut", "cre"), email = "l.presicce@campus.unimib.it", comment = c(ORCID = "0009-0005-7062-3523")),
+    person("Sudipto", "Banerjee", role = "aut"))
 Maintainer: Luca Presicce <l.presicce@campus.unimib.it>
-Author: Luca Presicce [aut, cre], Sudipto Banerjee [aut]
-Description: This package provides the computational framework to fit the accelerated spatial regression models following the approach presented and detailed in "Bayesian Transfer Learning for Artificially Intelligent Geospatial Systems: A Predictive Stacking Approach" of Presicce L., and Banerjee S. (2024) <doi:10.48550/arXiv.2410.09504>. The functions in the package use mostly Rcpp-armadillo implementations, offering computationally efficient Bayesian geostatistical modeling, ready for high performance computing and parallel environments.
+Author: Luca Presicce [aut, cre] (<https://orcid.org/0009-0005-7062-3523>), Sudipto Banerjee [aut]
+Description: Provides functions for Bayesian Predictive Stacking within the Bayesian transfer learning framework for geospatial artificial systems, as introduced in "Bayesian Transfer Learning for Artificially Intelligent Geospatial Systems: A Predictive Stacking Approach" by Presicce L. and Banerjee S. (2024) <doi:10.48550/arXiv.2410.09504>. This methodology enables efficient Bayesian geostatistical modeling, utilizing predictive stacking to improve inference across spatial datasets. The core functions leverage Rcpp-armadillo for high-performance computation, making the framework well-suited for large-scale spatial data analysis in parallel and distributed computing environments. Designed for scalability, it allows seamless application in computationally demanding scenarios.
 Depends: R (>= 1.8.0)
-Imports: Rcpp, CVXR
-LinkingTo: mniw, mvnfast, Rcpp, RcppArmadillo
-Suggests: testthat (>= 3.0.0)
+Imports: Rcpp, CVXR, mniw
+LinkingTo: Rcpp, RcppArmadillo
+Suggests: 
+    knitr,
+    rmarkdown,
+    mvnfast,
+    foreach,
+    parallel,
+    doParallel,
+    tictoc,
+    MBA,
+    RColorBrewer,
+    classInt,
+    sp,
+    fields,
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+VignetteBuilder: knitr
